# opcodesdumper

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.in  opcode_handler_php5_310  opcode_handlers.c  opcode_handlers.h  opcodes_dumper.c  opcodes_handlers.c  opcodes_handlers.h  php_5_4_opcodes_handlers  test.php
autom4te.cache/: output.1  requests  traces.0  traces.1
